--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "jsxBracketSameLine": false,
   "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "tabWidth": 2
 }
